--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ color: var(--background);
 .services{
   width: 100%;
   height: max-content;
-  background:  url('1707122431024.jpeg');
+  background:  url('1707122431024.jpg');
   background-attachment: fixed;
   overflow: hidden;
   padding: 0 0;
