--- a/style.css
+++ b/style.css
@@ -262,9 +262,18 @@ color: var(--background);
   overflow: hidden;
   padding: 0 0;
   background-repeat:no-repeat;
+  position: relative;
+}
+.services::before{
+content:'';
+  position: absolute;
+  top:0;
+  left:0;
+  background:var(--sec-cols);
+  width:100%;
+  height:100%;
 }
 .services .container{
-  background-color: var(--sec-cols);
   height: max-content;
   width: 100%;
   padding:50px 0;
