--- a/style.css
+++ b/style.css
@@ -258,11 +258,10 @@ color: var(--background);
   width: 100%;
   height: max-content;
   background:  url('1707122431024.jpg');
-  background-attachment: scroll;
+  background-attachment: fixed;
   overflow: hidden;
   padding: 0 0;
-  background-repeat:no-repeat;
-  background-position: center;
+  background-repeat:repeat-y;
   position: relative;
 }
 .services::before{
@@ -273,6 +272,8 @@ content:'';
   background:var(--sec-cols);
   width:100%;
   height:100%;
+isolation:isolate;
+
 }
 .services .container{
   height: max-content;
