--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .poppins-thin {
   font-family: "Poppins", serif;
   font-weight: 100;
@@ -40,6 +39,7 @@ a{
 body{
     background-color: var(--background);
       overflow-x: hidden;
+      position: relative;
 }
 
 nav{
@@ -95,7 +95,7 @@ nav .logo{
   transform: translateY(-10px) rotate(-45deg);
 }
 .yh{
-  left:0;
+left: calc(100% - 50%);
 }
 .ham{
   display: flex;
@@ -158,7 +158,7 @@ padding: 7px 30px;
 margin: 20px 0;
 line-height: 1.3;
 }
-.hero-cont::before{
+body::before{
   content: '';
   position: absolute;
   background-color: var(--sec-col);
@@ -216,7 +216,7 @@ filter: blur(400px);
   border: 2px solid var(--sec-col);
 }
 .about .sec-slide{
-  font-size: 20px;
+  font-size: 18px;
   padding: 0 2px;
   line-height: 1.3;
  
@@ -257,7 +257,7 @@ color: var(--background);
 .services{
   width: 100%;
   height: max-content;
-  background:  url('1707122431024.jpg');
+  background:  url('1707122431024.jpeg');
   background-attachment: fixed;
   overflow: hidden;
   padding: 0 0;
@@ -312,7 +312,7 @@ transform: translateX(-50%);
   .services .cards{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: 4rem;
     padding: 40px 30px;
   }
   .services .cards .card h2{
@@ -321,11 +321,11 @@ transform: translateX(-50%);
   }
   .services .cards .card .card_title,
   .services .cards .card .card_desc{
-    padding: 10px 5px;
+    padding: 10px 15px;
 
   }
   .services .container .cards .card hr{
-border-color:var(--text-col);
+border-color:var(--background);
 color: transparent;
 background-color: transparent;
 border-bottom: none;
@@ -336,6 +336,7 @@ border-bottom: none;
     display: grid;
     gap: 0.5rem;
     border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
   }
   .services img{
     border-radius: 10px;
@@ -356,28 +357,98 @@ padding: 10px 10px;
     font-size: 14px;
   color: var(--background);
 }
-.blogs{
+.blogs h2{
+font-size: 2.2rem;
+padding: 0px 30px;
+position: relative;
+margin: 10px 0;
+}
+.blogs h2::before{
+content: '';
+position: absolute;
+width: 5px;
+height:100%;
+background: var(--sec-col);
+margin-left: -10px;
+}
+.blogs .container{
+  margin-inline: auto;
+ display: grid;
+ grid-template-columns:repeat(3, 1fr);
+ gap: 1.5rem;
+ padding: 10px 30px;
+}
+.blogs iframe{
+ width:100%;
+}
+.blogs .cardm{
+  padding: 20px 5px;
+  display: grid;
+  gap: 0.5rem;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+.blogs .cardm .middle p{
+  font-size: 12px;
+  color: rgb(73, 72, 72);
+}
+.blogs .big_text{
+  font-size: 18px;
+}
+.blogs .btn{
+  margin-left:auto ;
+}
+@media (width > 1024px) {
+  .services .cards{
+      gap: 4rem;
+    padding: 40px 90px;
+  }
+}
+@media (width < 1024px) {
 
+.blogs .container {
+  grid-template-columns: 1fr 1fr;
+}
 }
 @media (width > 768px) {
   .ham{
     display: none;
   }
+  .services{
+    background-repeat: repeat;
+  }
+
 }
 @media (width < 768px) {
  ul{
   flex-direction: column;
   position: fixed;
   left: 100%;
-  background-color: var(--text-col);
- width: 100%;
-align-items: center;
- top: 100%;
- padding: 20px 0;
+ width: 50%;
+align-items: flex-start;
+ padding: 30px 0;
  transition: all 400ms ease;
+ top: 10%;
+ z-index: 999;
+ height: 90vh;
+ background-color: var(--text-col);
+ border-radius:10px ;
+ gap: 2rem;
  }
- ul li a{
+ nav ul li{
+padding: 5px 40px;
+width: 100%;
+cursor: pointer;
+ }
+ nav ul li a{
    color: var(--background);
+ }
+ li:hover{
+  background: rgba(255,255,255,0.5);
+
+ }
+ li i{
+  color: var(--background);
  }
  .about .container{
   grid-template-columns: 1fr;
@@ -396,5 +467,8 @@ align-items: center;
 .services .cards{
   grid-template-columns: 1fr ;
   gap: 3rem;
+}
+.blogs .container{
+  grid-template-columns: 1fr;
 }
 }
