--- a/style.css
+++ b/style.css
@@ -46,8 +46,11 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:30px 30px;
-    position: relative;
+    padding:15px 30px;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    background-color: #030303;
 }
 nav ul{
   display: flex;
@@ -61,7 +64,9 @@ nav ul li a{
 }
 nav .logo{
   color: var(--sec-col);
-  letter-spacing: 5px;
+  font-family: "Kanit", serif;
+  font-weight: 600;
+  font-style: italic;
 }
 .menu-icon {
 
@@ -74,7 +79,7 @@ nav .logo{
 }
 
 .line {
-  background-color: black;
+  background-color: white;
   height: 3px;
   width: 100%;
   display: block;
@@ -120,6 +125,17 @@ font-weight: 400;
 .hero-cont .first_side h2{
   font-size: 20px;
 font-weight: 500;
+
+}
+.hero-cont .first_side p {
+  width: 95%;
+
+}
+.hero-cont .first_side p span{
+  font-size: 22px;
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 .btn{
 display: flex;
@@ -185,6 +201,7 @@ body::before{
   color: var(--background );
   padding: 30px 0;
   position: relative;
+  overflow-y: hidden;
 }
 .about .container{
   width: 95%;
