--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --footer-col:#666666;
     --transition:all 200ms ease-in-out;
 }
+
 *{
     margin: 0;
     padding: 0;
@@ -41,6 +42,9 @@ body{
       overflow-x: hidden;
       position: relative;
 }
+html{
+        scroll-behavior: smooth;
+}
 
 nav{
     display: flex;
@@ -63,10 +67,11 @@ nav ul li a{
  color: white;
 }
 nav .logo{
-  color: var(--sec-col);
+
+  color: var(--background);
   font-family: "Kanit", serif;
   font-weight: 600;
-  font-style: italic;
+
 }
 .menu-icon {
 
@@ -132,10 +137,16 @@ font-weight: 500;
 
 }
 .hero-cont .first_side p span{
-  font-size: 22px;
   font-family: "Cormorant Garamond", serif;
-  font-weight: 500;
-  font-style: normal;
+font-size: 21px;
+  line-height: 1.3;
+  margin: 20px 0;
+  font-weight: 600;
+}
+.first_side .btn{
+display: flex;
+gap: 1rem;
+justify-content: left;
 }
 .btn{
 display: flex;
@@ -173,28 +184,6 @@ padding: 7px 30px;
   font-size: 18px;
 margin: 20px 0;
 line-height: 1.3;
-}
-body::before{
-  content: '';
-  position: absolute;
-  background-color: var(--sec-col);
-  height: 300px;
-  width: 300px;
-  top: 0;
-  left: -80%;
-  z-index: -1;
-  filter: blur(150px);
-}
-.hero-cont::after{
-  content: '';
-  position: absolute;
-  background-color: var(--sec-col);
-  height: 300px;
-  width: 300px;
-  bottom: 0;
-  right: -90%;
-  z-index: -1;
-  filter: blur(150px);
 }
 .about{
   background-color: var(--sce-bg);
@@ -461,7 +450,7 @@ padding: 20px 20px;
   
 }
 footer{
-  padding: 6rem 0;
+  padding:1rem 0;
    background: #282828;
 }
 .foot_cont{
@@ -509,6 +498,43 @@ text-align: center;
   font-size: 1.5rem;
   color: var(--background);
 }
+
+
+.cta {
+  background-color: var(--sec-col);
+  color: var(--background);
+  padding: 3rem 10px;
+  text-align: center;
+}
+
+.cta h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.cta p {
+  font-size: 20px;
+  margin-bottom: 2rem;
+}
+
+.cta .btn {
+  display: flex;
+  justify-content: center;
+  border: 2px solid white;
+  width: max-content;
+  border-radius: 5px;
+  transition: var(--transition);
+  
+  margin-inline:auto ;
+}
+.cta .btn:hover a{
+color: white;
+}
+.cta .btn:hover {
+  border: 2px solid black;
+
+}
+
 footer hr{
 width: 80%;
 display: flex;
@@ -520,6 +546,27 @@ margin:10px auto ;
 footer p{
   text-align: center;
   color: var(--background);
+}
+.form_body{
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.ham a{
+  color: var(--background);
+  text-decoration: none;
+  padding: 7px 10px;
+  border-radius: 3px;
+  background-color: var(--sec-col);
+  transition: var(--transition);
 }
 @media (width > 1024px) {
   .services .cards{
@@ -563,7 +610,7 @@ align-items: flex-start;
  gap: 2rem;
  }
  nav ul li{
-padding: 5px 40px;
+padding: 10px 40px;
 width: 100%;
 cursor: pointer;
  }
@@ -571,17 +618,12 @@ cursor: pointer;
    color: var(--background);
  }
  li:hover{
-  background: rgba(255,255,255,0.5);
-
+  background: rgba(255,255,255,0.3);
+border-radius: 100vw 0 0 100vw ;
  }
  li i{
   color: var(--background);
  }
-  hero-cont .first_side h1{
-font-size: 35px;
-
-font-weight: 400;
-   }
  .about .container{
   grid-template-columns: 1fr;
  }
