--- a/style.css
+++ b/style.css
@@ -585,7 +585,50 @@ form{
 
 }
 @media (width < 768px) {
- 
+ nav ul{
+        flex-direction: column;
+        position: fixed;
+        top: 90px;
+        left: -100%;
+        width: 100%;
+        height: 100vh;
+        transition: all 0.5s ease;
+        align-items: flex-start;
+        padding: 40px 0;
+        background: #2e3436;
+        border-top: 1px solid black;
+        border-radius: 5px;
+     
+    }
+    /* nav ul::before{
+        content: '';
+        position: absolute;
+background:linear-gradient(270deg,#de2b2c,#fdf6e3) ;
+ height: 100%;
+ width: 100%;
+ z-index: -1;
+ isolation: isolate;
+ filter:blur(300px);
+
+    } */
+    li{
+        padding: 10px 20px;
+        cursor: pointer;
+        width: 100%;
+    }
+    li a{
+        color: white;
+      text-transform: uppercase;
+    }
+    li:hover{
+        background-color: rgba(255,255,255,0.4);
+    }
+    li a:hover::before {
+    width: 0;
+    }
+    nav ul{
+        gap: 1rem;
+  }
  .about .container{
   grid-template-columns: 1fr;
  }
