--- a/style.css
+++ b/style.css
@@ -46,6 +46,26 @@ html{
         scroll-behavior: smooth;
 }
 
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 25px;
+    position: relative;
+    z-index: 9999;
+    background: #fdf6e3;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+a{
+    text-decoration: none;
+}
+nav .logo{
+    width: 70px;
+    height: 70px;
+}
+.logo img{
+    border-radius: 50%;
+}
 nav ul{
     display: flex;
     align-items: center;
@@ -98,7 +118,7 @@ li a:hover::before {
 }
 .active{
      left: 0;
-}
+      }
 .ham{
   display: flex;
   gap: 1rem;
