--- a/style.css
+++ b/style.css
@@ -598,7 +598,7 @@ form{
 }
 }
 @media (width > 768px) {
-  .ham{
+  .menu{
     display: none;
   }
   .services{
@@ -607,6 +607,7 @@ form{
 
 }
 @media (width < 768px) {
+  
  nav ul{
         flex-direction: column;
         position: fixed;
