--- a/style.css
+++ b/style.css
@@ -54,9 +54,8 @@ nav{
     padding: 10px 25px;
     position: relative;
     z-index: 9999;
-    background:black;
-  color:white;
-  height:50px;
+    background:beige;
+    color:#333333;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 a{
@@ -93,9 +92,7 @@ li a::before{
 li a:hover::before {
     width: 100%;
 }
-nav .logo a {
-color:red;
-}
+
 .menu{
     display: flex;
     flex-direction: column;
@@ -137,12 +134,12 @@ color:red;
   height: max-content;
 }
 .hero-cont .first_side h1{
-font-size: 45px;
-font-weight: 400;
+ font-size: 45px;
+  font-weight: 400;
 }
 .hero-cont .first_side h2{
   font-size: 20px;
-font-weight: 500;
+  font-weight: 500;
 
 }
 .hero-cont .first_side p {
@@ -151,7 +148,7 @@ font-weight: 500;
 }
 .hero-cont .first_side p span{
   font-family: "Cormorant Garamond", serif;
-font-size: 21px;
+  font-size: 21px;
   line-height: 1.3;
   margin: 20px 0;
   font-weight: 600;
