--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 20px 25px;
-    position: relative;
+    position: sticky;
     z-index: 9999;
     background:f0f0f0;
     color:#333333;
