--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ nav{
     background:f0f0f0;
     color:#333333;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  top:0;
 }
 a{
     text-decoration: none;
