--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav{
     padding: 20px 25px;
     position: sticky;
     z-index: 9999;
-    background:f0f0f0;
+    background:fffff0;
     color:#333333;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   top:0;
